# golden

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  License.md  OpenCLHelpers.hpp  Readme.md  VectorConverter.hpp  library.h
include/: Golden.hpp  Tester.hpp
include/golden/: Config.hpp  Config.hpp.in  Tester.hpp  Utility.hpp
include/golden/protobuf/: Comparer.hpp  Reader.hpp  ReaderZlib.hpp  Tester.hpp  Writer.hpp  WriterZlib.hpp  Zlib.h
include/golden/silver/: Silver.hpp  SilverPlate.hpp
include/golden/silver/protobuf/: SilverPlate.hpp
include/midas/: Converters.hpp  CudaConverters.hpp  Dim3Converter.hpp  Float4Converter.hpp  Int4Converter.hpp  MallocInteropArrayConverter.hpp  PrimitiveConverter.hpp  ProtobufSupport.proto  ProtobufUtility.hpp  RegisterCudaConverter.hpp  VectorConverter.hpp  cuda.hpp  midas.hpp  protobuf.hpp
include/midas/cuda/: ComplexConverter.hpp  CudaConverters.hpp  CudaHelpers.hpp  Dim3Converter.hpp  Float2Converter.hpp  Float3Converter.hpp  Float4Converter.hpp  Int2Converter.hpp  Int4Converter.hpp  MallocInterop.hpp  MallocInteropArrayConverter.hpp  PrimitiveConverter.hpp  RegisterCudaConverter.hpp  VectorConverter.hpp  utility.hpp
include/midas/cuda/protobuf/: to.hpp
include/midas/host/protobuf/: from.hpp  to.hpp
include/midas/opencl/: Dim3Converter.hpp  Float2Converter.hpp  Float3Converter.hpp  Float4Converter.hpp  Int2Converter.hpp  Int4Converter.hpp  MallocInterop.hpp  MallocInteropArrayConverter.hpp  OpenCLBase.hpp  OpenCLConverters.hpp  OpenCLHelpers.hpp  PrimitiveConverter.hpp  StringConverter.hpp  VectorConverter.hpp
include/midas/protobuf/: cuda.hpp  host.hpp  opencl.hpp
scripts/: generate-midas-tests-protobufs.sh
tests/: CMakeLists.txt  GoldenTests.cpp  GoldenTests.proto  MidasTests.cu  ProtobufComparerTests.cpp  ProtobufReaderTests.cpp  ProtobufSilver.cpp  ProtobufWriterTests.cpp
tests/midas/: MidasTests.proto
tests/midas/cuda/: Dim3ConverterTests.hpp  Driver.cu  Float4ConverterTests.hpp  Int4ConverterTests.hpp  MallocInteropTestsTests.hpp  PrimitiveConverterTests.hpp  VectorConverterTests.hpp
tests/midas/opencl/: Dim3ConverterTests.hpp  Driver.cpp  Float4ConverterTests.hpp  Int4ConverterTests.hpp  MallocInteropTestsTests.hpp  PrimitiveConverterTests.hpp  TestsUtility.cpp  TestsUtility.hpp  VectorConverter.cpp  VectorConverterTests.hpp
